fixed overflow in user recent posts

--- a/less/account.less
+++ b/less/account.less
@@ -87,3 +87,11 @@
   font-weight:bold;
 }
 
+
+.user-recent-posts {
+	.panel-body {
+		>div {
+			word-break: break-word;
+		}
+	}
+}
